调整了Bar的基本样式，添加了HomeMenu，还有一些bug

--- a/src/flatui/CmakeLists.txt
+++ b/src/flatui/CmakeLists.txt
@@ -11,5 +11,6 @@ set(FLATUI_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUISystemButtons.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIEventManager.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUISpacerControl.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIHomeMenu.cpp
     PARENT_SCOPE
 )
