基本功能实现，下一步进行细节调整，目前菜单事件，bar和子控件的边框等还没有实现

--- a/src/CmakeLists.txt
+++ b/src/CmakeLists.txt
@@ -1,4 +1,5 @@
 set(MAINAPPLICATION_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/MainApplication.cpp
+    #${CMAKE_CURRENT_SOURCE_DIR}/MainFrame.cpp
     PARENT_SCOPE
 )
