--- a/src/flatui/CmakeLists.txt
+++ b/src/flatui/CmakeLists.txt
@@ -12,5 +12,6 @@ set(FLATUI_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIEventManager.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUISpacerControl.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIHomeMenu.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/UIHierarchyDebugger.cpp
     PARENT_SCOPE
 )
