对菜单继承父类，Bar的颜色等微调，调整未全完成

--- a/src/CmakeLists.txt
+++ b/src/CmakeLists.txt
@@ -1,5 +1,5 @@
 set(MAINAPPLICATION_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/MainApplication.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/MainFrame.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/FlatFrame.cpp
     PARENT_SCOPE
 )
