把程序中所有常量参数重构到config.ini中

--- a/config/config.ini
+++ b/config/config.ini
@@ -8,4 +8,110 @@ BackgroundColorB=0.9
 
 MaterialColorR=0.7
 MaterialColorG=0.8
-MaterialColorB=1.0 
+MaterialColorB=1.0
+
+[MainApplication]
+MainFramePosition=Center
+MainFrameTitle=FlatUI Demo
+MainFrameSize=1200,700 
+
+[FlatUIConstants]
+# Global Colors (rgb格式)
+WindowMotionColor=150,150,150
+PrimaryFrameBorderColour=230,200,0
+PrimaryContentBgColour=240,240,240
+DefaultBgColour=240,240,240
+DefaultBorderColour=170,170,170
+DefaultTextColour=100,100,100
+HighlightColour=0,120,215
+
+# Default Font Settings
+DefaultFontSize=8
+DefaultFontFamily=wxFONTFAMILY_SWISS
+DefaultFontStyle=wxFONTSTYLE_NORMAL
+DefaultFontWeight=wxFONTWEIGHT_NORMAL
+DefaultFontFaceName=Consolas
+
+# FlatUIBar Colors
+BarBackgroundColour=220,220,220
+ActBarBackgroundColour=255,255,255
+BarTabBorderColour=170,170,170
+BarActiveTabTopBorderColour=180,180,180
+BarActiveTextColour=100,100,100
+BarInactiveTextColour=70,70,70
+
+# FlatUIBar Spaces 
+HomespaceHoverBgColour=200,200,200
+ProfileSpaceDefaulWidth=100
+
+# FlatUIPanel Colors
+PanelBorderColour=200,200,200
+PanelHeaderColour=230,230,230
+PanelHeaderTextColour=100,100,100
+
+# FlatUIButtonBar Colors
+ButtonbarDefaultBgColour=240,240,240
+ButtonbarDefaultHoverBgColour=230,230,230
+ButtonbarDefaultPressedBgColour=220,220,220
+ButtonbarDefaultTextColour=100,100,100
+ButtonbarDefaultBorderColour=200,200,200
+ButtonbarPanelBgColour=230,230,230
+ButtonbarPanelBorderColour=200,200,200
+
+# Sizes & Spacing - FlatUIBar
+BarTopMargin=2
+BarRenderHeight=26
+BarTabPadding=10
+BarTabSpacing=0
+BarElementSpacing=5
+BarBarPadding=0
+
+# Sizes & Spacing - FlatUIButtonBar
+ButtonbarTargetHeight=30
+ButtonbarIconSize=24
+ButtonbarHorizontalPadding=2
+ButtonbarInternalVerticalPadding=3
+ButtonbarSpacing=2
+ButtonbarBarHorizontalMargin=2
+ButtonbarDefaultBorderWidth=0
+ButtonbarDefaultCornerRadius=0
+ButtonbarMenuVerticalOffset=2
+ButtonbarDropdownArrowWidth=5
+ButtonbarDropdownArrowHeight=3
+
+# Separator Constants
+ButtonbarSeparatorWidth=1
+ButtonbarSeparatorPadding=2
+ButtonbarSeparatorMargin=4
+
+# FlatUIGallery
+GalleryTargetHeight=30
+GalleryItemSpacing=2
+GalleryHorizontalMargin=2
+
+# FlatUIPanel Size & Padding
+PanelInternalVerticalPadding=2
+PanelInternalHorizontalPadding=2
+PanelInternalPaddingTotal=4
+PanelTargetHeight=60
+PanelCollapsedHeight=30
+PanelDefaultHeaderAreaSize=20
+InnerbarBorderSpacing=5
+PanelSepatatorColor=200,200,200
+PanelSepatatorWidth=1
+
+# FlatUIPanel/Page Margin & Padding
+PanelMargin=8
+PanelPadding=8
+PageMargin=8
+PagePadding=8
+
+#HomeSpace
+SystemButtonWidth=40
+SystemButtonHeight=30
+SystemButtonSpacing=0
+
+#HomeMenu Params
+HomeMenuItemHeight=25; 
+HomeMenuSeparatorHeight=5;
+HomeMenuWidth=240;
