--- a/src/config/CmakeLists.txt
+++ b/src/config/CmakeLists.txt
@@ -2,5 +2,6 @@ set(CONFIG_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/ConfigManager.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/LoggerConfig.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Coin3DConfig.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ConstantsConfig.cpp
     PARENT_SCOPE
 )
