改写了FlatUIBar，改写了橡皮筋效果

--- a/config/config.ini
+++ b/config/config.ini
@@ -18,6 +18,7 @@ MainFrameSize=1200,700
 [FlatUIConstants]
 # Global Colors (rgb格式)
 WindowMotionColor=150,150,150
+FrameBorderColor=255,100,0
 PrimaryFrameBorderColour=230,200,0
 PrimaryContentBgColour=240,240,240
 DefaultBgColour=240,240,240
