修改了橡皮筋边框实现，采用系统DPI抑制绘制闪烁

--- a/config/config.ini
+++ b/config/config.ini
@@ -61,11 +61,11 @@ ButtonbarPanelBorderColour=200,200,200
 
 # Sizes & Spacing - FlatUIBar
 BarTopMargin=2
-BarRenderHeight=26
+BarRenderHeight=30
 BarTabPadding=10
 BarTabSpacing=0
 BarElementSpacing=5
-BarBarPadding=0
+BarPadding=0
 
 # Sizes & Spacing - FlatUIButtonBar
 ButtonbarTargetHeight=30
