统一处理了FlatUIBar的BarSpace的子控件间距问题，对FlatBar设置了Margin以划线来实现Tab的效果

--- a/config/config.ini
+++ b/config/config.ini
@@ -43,7 +43,7 @@ BarInactiveTextColour=70,70,70
 
 # FlatUIBar Spaces 
 HomespaceHoverBgColour=200,200,200
-ProfileSpaceDefaulWidth=100
+SpaceDefaulWidth=100
 
 # FlatUIPanel Colors
 PanelBorderColour=200,200,200
@@ -109,7 +109,7 @@ PagePadding=8
 
 #HomeSpace
 SystemButtonWidth=40
-SystemButtonHeight=30
+SystemButtonHeight=32
 SystemButtonSpacing=0
 
 #HomeMenu Params
