--- a/config/config.ini
+++ b/config/config.ini
@@ -20,7 +20,7 @@ MainFrameSize=1200,700
 WindowMotionColor=150,150,150
 FrameBorderColor=255,100,0
 PrimaryFrameBorderColour=230,200,0
-PrimaryContentBgColour=240,240,240
+PrimaryContentBgColour=250,250,250
 DefaultBgColour=240,240,240
 DefaultBorderColour=170,170,170
 DefaultTextColour=100,100,100
@@ -64,8 +64,9 @@ BarTopMargin=2
 BarRenderHeight=30
 BarTabPadding=10
 BarTabSpacing=0
-BarElementSpacing=5
+BarElementSpacing=0
 BarPadding=0
+BarTabBorderTop=2
 
 # Sizes & Spacing - FlatUIButtonBar
 ButtonbarTargetHeight=30
