只访问配置文件获得参数，不在使用constants的默认值，修改了tab的边线。调整了bar下边线，无法判断是否可用

--- a/config/config.ini
+++ b/config/config.ini
@@ -34,7 +34,8 @@ DefaultFontWeight=wxFONTWEIGHT_NORMAL
 DefaultFontFaceName=Consolas
 
 # FlatUIBar Colors
-BarBackgroundColour=220,220,220
+BarBackgroundColour=240,240,240
+BarBorderColour=0,255,255
 ActBarBackgroundColour=255,255,255
 BarTabBorderColour=170,170,170
 BarActiveTabTopBorderColour=180,180,180
@@ -61,6 +62,7 @@ ButtonbarPanelBorderColour=200,200,200
 
 # Sizes & Spacing - FlatUIBar
 BarTopMargin=2
+BarBottomMargin=0
 BarRenderHeight=30
 BarTabPadding=10
 BarTabSpacing=0
@@ -85,6 +87,10 @@ ButtonbarDropdownArrowHeight=3
 ButtonbarSeparatorWidth=1
 ButtonbarSeparatorPadding=2
 ButtonbarSeparatorMargin=4
+
+#Icons
+IconTextBelowSpacing=1
+IconTextBelowTopMargin=2
 
 # FlatUIGallery
 GalleryTargetHeight=30
