--- a/config/config.ini
+++ b/config/config.ini
@@ -35,7 +35,7 @@ DefaultFontFaceName=Consolas
 
 # FlatUIBar Colors
 BarBackgroundColour=240,240,240
-BarBorderColour=0,255,255
+BarBorderColour=170,170,170
 ActBarBackgroundColour=255,255,255
 BarTabBorderColour=170,170,170
 BarActiveTabTopBorderColour=180,180,180
@@ -52,7 +52,7 @@ PanelHeaderColour=230,230,230
 PanelHeaderTextColour=100,100,100
 
 # FlatUIButtonBar Colors
-ButtonbarDefaultBgColour=240,240,240
+ButtonbarDefaultBgColour=255,255,255
 ButtonbarDefaultHoverBgColour=230,230,230
 ButtonbarDefaultPressedBgColour=220,220,220
 ButtonbarDefaultTextColour=100,100,100
@@ -69,18 +69,19 @@ BarTabSpacing=0
 BarElementSpacing=0
 BarPadding=0
 BarTabBorderTop=2
+TabTopSpacing=4
 
 # Sizes & Spacing - FlatUIButtonBar
 ButtonbarTargetHeight=30
 ButtonbarIconSize=24
 ButtonbarHorizontalPadding=2
 ButtonbarInternalVerticalPadding=3
-ButtonbarSpacing=2
-ButtonbarBarHorizontalMargin=2
+ButtonbarSpacing=0
+ButtonbarBarHorizontalMargin=4
 ButtonbarDefaultBorderWidth=0
 ButtonbarDefaultCornerRadius=0
 ButtonbarMenuVerticalOffset=2
-ButtonbarDropdownArrowWidth=5
+ButtonbarDropdownArrowWidth=6
 ButtonbarDropdownArrowHeight=3
 
 # Separator Constants
