--- a/src/config/CmakeLists.txt
+++ b/src/config/CmakeLists.txt
@@ -3,6 +3,6 @@ set(CONFIG_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/LoggerConfig.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Coin3DConfig.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/ConstantsConfig.cpp
-    #${CMAKE_CURRENT_SOURCE_DIR}/SvgIconManager.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/SvgIconManager.cpp
     PARENT_SCOPE
 )
