问题出现在当frame宽度隐藏functionspace时后关闭窗口，出现对空指针的引用，就是程序关闭，但event未被完整清楚导致内存泄漏，问题在 SetChildControl(nullptr) 被调用，但在 FlatUIFunctionSpace 和 FlatUIProfileSpace 的 SetChildControl 方法中，当传入 nullptr 时，原有的子控件被 Reparent(nullptr) ，这会导致控件失去父窗口，但控件本身并没有被正确销毁。 在程序退出时，这些失去父窗口的控件仍然存在，但它们的事件处理器状态不正确，导致wxWidgets在析构时出现断言失败。

--- a/config/config.ini
+++ b/config/config.ini
@@ -70,6 +70,7 @@ BarElementSpacing=0
 BarPadding=0
 BarTabBorderTop=2
 TabTopSpacing=4
+TabsScrollButtonWidth=20
 
 # Sizes & Spacing - FlatUIButtonBar
 ButtonbarTargetHeight=30
@@ -117,7 +118,7 @@ PagePadding=8
 
 #HomeSpace
 SystemButtonWidth=40
-SystemButtonHeight=32
+SystemButtonHeight=30
 SystemButtonSpacing=0
 
 #HomeMenu Params
