修复因合并版本导致的代码合并错误

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,6 @@ FodyWeavers.xsd
 /build
 /config/.cursor/rules
 /.gitignore
+/build/wxapp.vcxproj
+/build/wxapp.vcxproj.filters
+/build/wxapp.vcxproj
