修复因m_temporarilyShownPage未初始化，导致的空指针操作问题

--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,5 @@ FodyWeavers.xsd
 /build/wxapp.vcxproj
 /build/wxapp.vcxproj.filters
 /build/wxapp.vcxproj
+/build/wxapp.vcxproj
+/build/wxapp.vcxproj.filters
