在标签栏上的pin/unpin图标控制Bar的Pages固定显示和隐藏，frame中的控件随显示/隐藏自动适应高度变化

--- a/config/config.ini
+++ b/config/config.ini
@@ -64,6 +64,7 @@ ButtonbarPanelBorderColour=200,200,200
 BarTopMargin=2
 BarBottomMargin=0
 BarRenderHeight=30
+BarUnpinnedHeight=35
 BarTabPadding=10
 BarTabSpacing=0
 BarElementSpacing=0
@@ -79,6 +80,7 @@ ButtonbarHorizontalPadding=2
 ButtonbarInternalVerticalPadding=3
 ButtonbarSpacing=0
 ButtonbarBarHorizontalMargin=4
+ButtonbarVerticalMargin=2
 ButtonbarDefaultBorderWidth=0
 ButtonbarDefaultCornerRadius=0
 ButtonbarMenuVerticalOffset=2
@@ -97,7 +99,9 @@ IconTextBelowTopMargin=2
 # FlatUIGallery
 GalleryTargetHeight=28
 GalleryItemSpacing=2
+GalleryItemPadding=2
 GalleryHorizontalMargin=2
+GalleryVerticalMargin=2
 GalleryInternalVerticalPadding=2
 
 # FlatUIPanel Size & Padding
@@ -106,7 +110,7 @@ PanelInternalHorizontalPadding=2
 PanelInternalPaddingTotal=2
 PanelTargetHeight=50
 PanelCollapsedHeight=16
-PanelDefaultHeaderAreaSize=20
+PanelDefaultHeaderAreaSize=16
 InnerbarBorderSpacing=2
 PanelSepatatorColor=200,200,200
 PanelSepatatorWidth=1
