在把Flat UIP i你Control分拆为FlatPinButton和FlatUnPinButton后基本实现了对ribbon的工具栏固定和浮动隐藏显示，但现在图标出现的逻辑还比较混乱

--- a/src/flatui/CmakeLists.txt
+++ b/src/flatui/CmakeLists.txt
@@ -16,7 +16,8 @@ set(FLATUI_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIEventManager.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUISpacerControl.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIHomeMenu.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIPinControl.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIPinButton.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIUnPinButton.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIFloatPanel.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/UIHierarchyDebugger.cpp
     PARENT_SCOPE
