实现了flatuiBar分为barspace标签栏和fixpanel固定工具栏或floatpanel浮动工具栏的上下两部分组合，通过在fixpanel右下角的unpinbutton切换到浮动工具栏，和在floatpanel右下角的pinbutton切换到固定工具栏，在浮动工具栏时，界面控件自动适应位置，现在还有一下bug，需进一步修改

--- a/src/flatui/CmakeLists.txt
+++ b/src/flatui/CmakeLists.txt
@@ -19,6 +19,7 @@ set(FLATUI_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIPinButton.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIUnPinButton.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIFloatPanel.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIFixPanel.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/UIHierarchyDebugger.cpp
     PARENT_SCOPE
 )
