重构了FlatUIBar的标签工具栏增加了新的FlatBarSpaceContainer来对标签工具栏的控件布局和优先级进行管理

--- a/config/config.ini
+++ b/config/config.ini
@@ -39,6 +39,8 @@ BarBorderColour=170,170,170
 ActBarBackgroundColour=255,255,255
 BarTabBorderColour=170,170,170
 BarActiveTabTopBorderColour=180,180,180
+BarActiveTabBgColour=255,255,255
+BarTabBorderTopColour=0,120,215
 BarActiveTextColour=100,100,100
 BarInactiveTextColour=70,70,70
 
