自定义下拉菜单按钮. 三种支持的样式模式 所有样式都采用扁平设计： LeftIcon_Text_RightDropdown: 左图标 + 文字 + 右侧下拉 Text_RightDropdown: 文字 + 右侧下拉（默认） DropdownOnly: 仅包含下拉图标的按钮 5. 优化的尺寸计算 移除了分隔线的额外空间占用 更紧凑的布局适合扁平设计

--- a/src/flatui/CmakeLists.txt
+++ b/src/flatui/CmakeLists.txt
@@ -28,5 +28,6 @@ set(FLATUI_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUIFloatPanel.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/FlatUITabDropdown.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/UIHierarchyDebugger.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/CustomDropDown.cpp
     PARENT_SCOPE
 )
