重构程序以增加界面主题样式的配置支持

--- a/config/config.ini
+++ b/config/config.ini
@@ -15,15 +15,17 @@ MainFramePosition=Center
 MainFrameTitle=FlatUI Demo
 MainFrameSize=1200,700 
 
+[Theme]
+CurrentTheme=dark
+
 [FlatUIConstants]
-# Global Colors (rgb格式)
+# Global Colors (rgb format)
 WindowMotionColor=150,150,150
 FrameBorderColor=0,200,200
 PrimaryFrameBorderColour=230,200,0
 PrimaryContentBgColour=250,250,250
 DefaultBgColour=240,240,240
 DefaultBorderColour=170,170,170
-DefaultTextColour=100,100,100
 HighlightColour=0,120,215
 
 # Default Font Settings
@@ -61,6 +63,50 @@ ButtonbarDefaultTextColour=100,100,100
 ButtonbarDefaultBorderColour=200,200,200
 ButtonbarPanelBgColour=230,230,230
 ButtonbarPanelBorderColour=200,200,200
+
+# Hardcoded colors that need to be configurable
+SystemButtonCloseHoverColour=232,17,35
+SystemButtonTextColour=0,0,0
+SystemButtonHoverTextColour=255,255,255
+SystemButtonBgColour=240,240,240
+GalleryItemBgColour=250,250,250
+GalleryItemHoverBgColour=240,240,240
+GalleryItemSelectedBgColour=230,230,230
+GalleryItemBorderColour=200,200,200
+GalleryTextColour=120,120,120
+FloatPanelShadowColour=255,255,255,100
+CustomControlBgColour=200,200,200
+BorderlessFramePenColour=100,100,100
+
+# UI Text Colors
+DefaultTextColour=100,100,100
+MenuTextColour=0,0,0
+ErrorTextColour=255,0,0
+PlaceholderTextColour=128,128,128
+
+# Background Colors
+MainBackgroundColour=250,250,250
+SecondaryBackgroundColour=255,255,255
+ErrorBackgroundColour=255,255,255
+WarningBackgroundColour=245,245,245
+MenuBackgroundColour=255,255,255
+
+# Button and Control Colors
+ButtonTextPlaceholderColour=120,120,120
+DropdownBackgroundColour=255,255,255
+DropdownBorderColour=170,170,170
+DropdownHoverColour=230,230,230
+DropdownSelectionBgColour=0,120,215
+DropdownSelectionTextColour=255,255,255
+
+# Frame and Panel specific colors
+FrameAppWorkspaceColour=240,240,240
+SvgPanelBgColour=245,245,245
+ScrolledWindowBgColour=255,255,255
+IconPanelBgColour=255,255,255
+
+# SVG Theme Configuration
+SvgThemeEnabled=true
 
 # Sizes & Spacing - FlatUIBar
 BarTopMargin=2
