--- a/src/config/CmakeLists.txt
+++ b/src/config/CmakeLists.txt
@@ -1,8 +1,9 @@
 set(CONFIG_SOURCES
     ${CMAKE_CURRENT_SOURCE_DIR}/ConfigManager.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ConstantsConfig.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/LoggerConfig.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/Coin3DConfig.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/ConstantsConfig.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/SvgIconManager.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/ThemeManager.cpp
     PARENT_SCOPE
 )
