实现了动态改变主题的功能，相应的配置文件按照多主题进行管理

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,3 +1,8 @@
+# ====================================================================
+# wxGUI Application Configuration File
+# 支持三种主题：default(亮色)、dark(暗色)、blue(淡蓝色)
+# ====================================================================
+
 [Logger]
 LogLevel=WRN
 
@@ -5,7 +10,6 @@ LogLevel=WRN
 BackgroundColorR=0.9
 BackgroundColorG=1.0
 BackgroundColorB=0.9
-
 MaterialColorR=0.7
 MaterialColorG=0.8
 MaterialColorB=1.0
@@ -15,100 +19,138 @@ MainFramePosition=Center
 MainFrameTitle=FlatUI Demo
 MainFrameSize=1200,700 
 
+# ====================================================================
+# 主题设置 - 可选值: default, dark, blue
+# ====================================================================
 [Theme]
-CurrentTheme=dark
+CurrentTheme=default
 
-[FlatUIConstants]
-# Global Colors (rgb format)
-WindowMotionColor=150,150,150
-FrameBorderColor=0,200,200
-PrimaryFrameBorderColour=230,200,0
-PrimaryContentBgColour=250,250,250
-DefaultBgColour=240,240,240
-DefaultBorderColour=170,170,170
-HighlightColour=0,120,215
+# ====================================================================
+# 主题配置 - 所有颜色值都会根据当前主题自动调整
+# 格式: ConfigKey=default_value,dark_value,blue_value
+# ====================================================================
+[ThemeColors]
 
-# Default Font Settings
+# === 基础颜色 ===
+# 窗口和背景色
+WindowMotionColor=150,150,150;60,60,60;120,140,160
+PrimaryContentBgColour=250,250,250;45,45,48;240,245,250
+DefaultBgColour=240,240,240;37,37,38;230,240,250
+SecondaryBackgroundColour=255,255,255;37,37,38;245,250,255
+MainBackgroundColour=250,250,250;45,45,48;240,245,250
+
+# 主题化的标准颜色
+ThemeWhiteColour=255,255,255;240,240,240;250,250,255
+ThemeBlackColour=0,0,0;220,220,220;40,40,60
+ThemeBlackPenColour=0,0,0;180,180,180;60,60,80
+
+# 边框和分隔线
+FrameBorderColor=0,200,200;80,80,80;0,150,200
+PrimaryFrameBorderColour=230,200,0;100,100,100;0,120,215
+DefaultBorderColour=170,170,170;85,85,85;150,180,210
+HighlightColour=0,120,215;0,122,204;0,120,215
+
+# === 文字颜色 ===
+DefaultTextColour=100,100,100;220,220,220;80,80,100
+MenuTextColour=0,0,0;220,220,220;40,60,80
+ErrorTextColour=255,0,0;244,71,71;200,50,50
+PlaceholderTextColour=128,128,128;140,140,140;120,140,160
+
+# === FlatUIBar 颜色 ===
+BarBackgroundColour=240,240,240;45,45,48;235,240,250
+BarBorderColour=170,170,170;85,85,85;150,180,210
+ActBarBackgroundColour=255,255,255;37,37,38;245,250,255
+BarTabBorderColour=170,170,170;85,85,85;150,180,210
+BarActiveTabTopBorderColour=180,180,180;100,100,100;160,190,220
+BarActiveTabBgColour=255,255,255;37,37,38;245,250,255
+BarTabBorderTopColour=0,120,215;0,122,204;0,120,215
+BarActiveTextColour=100,100,100;220,220,220;80,80,100
+BarInactiveTextColour=70,70,70;170,170,170;100,120,140
+
+# === 空间和悬停效果 ===
+HomespaceHoverBgColour=200,200,200;62,62,64;210,220,235
+
+# === 面板颜色 ===
+PanelBorderColour=200,200,200;85,85,85;170,190,210
+PanelHeaderColour=230,230,230;55,55,58;220,230,245
+PanelHeaderTextColour=100,100,100;220,220,220;80,80,100
+PanelSepatatorColor=200,200,200;85,85,85;170,190,210
+
+# === 主页菜单颜色 ===
+HomeMenuBorderColour=170,170,170;85,85,85;150,180,210
+
+# === 按钮栏颜色 ===
+ButtonbarDefaultBgColour=255,255,255;45,45,48;245,250,255
+ButtonbarDefaultHoverBgColour=230,230,230;62,62,64;225,235,250
+ButtonbarDefaultPressedBgColour=220,220,220;85,85,85;200,220,240
+ButtonbarDefaultTextColour=100,100,100;220,220,220;80,80,100
+ButtonbarDefaultBorderColour=200,200,200;85,85,85;170,190,210
+ButtonbarPanelBgColour=230,230,230;55,55,58;220,230,245
+ButtonbarPanelBorderColour=200,200,200;85,85,85;170,190,210
+ButtonTextPlaceholderColour=120,120,120;160,160,160;130,150,170
+
+# === 系统按钮颜色 ===
+SystemButtonCloseHoverColour=232,17,35;196,43,28;200,50,70
+SystemButtonTextColour=0,0,0;220,220,220;40,60,80
+SystemButtonHoverTextColour=255,255,255;255,255,255;255,255,255
+SystemButtonBgColour=240,240,240;45,45,48;235,240,250
+
+# === Gallery 颜色 ===
+GalleryItemBgColour=250,250,250;45,45,48;240,245,250
+GalleryItemHoverBgColour=240,240,240;62,62,64;225,235,250
+GalleryItemSelectedBgColour=230,230,230;85,85,85;200,220,240
+GalleryItemBorderColour=200,200,200;85,85,85;170,190,210
+GalleryTextColour=120,120,120;180,180,180;100,120,140
+
+# === 浮动面板和特殊控件 ===
+FloatPanelShadowColour=255,255,255,100;0,0,0,150;200,220,240,120
+CustomControlBgColour=200,200,200;85,85,85;170,190,210
+BorderlessFramePenColour=100,100,100;150,150,150;120,140,160
+
+# === 下拉控件颜色 ===
+DropdownBackgroundColour=255,255,255;45,45,48;245,250,255
+DropdownBorderColour=170,170,170;85,85,85;150,180,210
+DropdownHoverColour=230,230,230;62,62,64;225,235,250
+DropdownSelectionBgColour=0,120,215;0,122,204;0,120,215
+DropdownSelectionTextColour=255,255,255;255,255,255;255,255,255
+
+# === 框架和面板背景 ===
+FrameAppWorkspaceColour=240,240,240;30,30,30;230,240,250
+SvgPanelBgColour=245,245,245;45,45,48;235,245,255
+ScrolledWindowBgColour=255,255,255;37,37,38;245,250,255
+IconPanelBgColour=255,255,255;37,37,38;245,250,255
+ErrorBackgroundColour=255,255,255;50,45,45;255,245,245
+WarningBackgroundColour=245,245,245;55,50,45;250,248,240
+MenuBackgroundColour=255,255,255;45,45,48;245,250,255
+
+# ====================================================================
+# SVG 主题配置
+# ====================================================================
+[SvgTheme]
+SvgThemeEnabled=true
+
+# SVG 图标颜色 (格式同上: default,dark,blue)
+SvgPrimaryIconColour=100,100,100;220,220,220;80,80,100
+SvgSecondaryIconColour=70,70,70;170,170,170;100,120,140
+SvgDisabledIconColour=180,180,180;120,120,120;160,170,180
+SvgHighlightIconColour=0,120,215;0,122,204;0,120,215
+
+# ====================================================================
+# 字体设置
+# ====================================================================
+[Font]
 DefaultFontSize=8
 DefaultFontFamily=wxFONTFAMILY_TELETYPE
 DefaultFontStyle=wxFONTSTYLE_NORMAL
 DefaultFontWeight=wxFONTWEIGHT_NORMAL
 DefaultFontFaceName=Consolas
 
-# FlatUIBar Colors
-BarBackgroundColour=240,240,240
-BarBorderColour=170,170,170
-ActBarBackgroundColour=255,255,255
-BarTabBorderColour=170,170,170
-BarActiveTabTopBorderColour=180,180,180
-BarActiveTabBgColour=255,255,255
-BarTabBorderTopColour=0,120,215
-BarActiveTextColour=100,100,100
-BarInactiveTextColour=70,70,70
+# ====================================================================
+# 尺寸和间距配置 (这些值通常不随主题变化)
+# ====================================================================
 
-# FlatUIBar Spaces 
-HomespaceHoverBgColour=200,200,200
-SpaceDefaulWidth=100
-
-# FlatUIPanel Colors
-PanelBorderColour=200,200,200
-PanelHeaderColour=230,230,230
-PanelHeaderTextColour=100,100,100
-
-# FlatUIButtonBar Colors
-ButtonbarDefaultBgColour=255,255,255
-ButtonbarDefaultHoverBgColour=230,230,230
-ButtonbarDefaultPressedBgColour=220,220,220
-ButtonbarDefaultTextColour=100,100,100
-ButtonbarDefaultBorderColour=200,200,200
-ButtonbarPanelBgColour=230,230,230
-ButtonbarPanelBorderColour=200,200,200
-
-# Hardcoded colors that need to be configurable
-SystemButtonCloseHoverColour=232,17,35
-SystemButtonTextColour=0,0,0
-SystemButtonHoverTextColour=255,255,255
-SystemButtonBgColour=240,240,240
-GalleryItemBgColour=250,250,250
-GalleryItemHoverBgColour=240,240,240
-GalleryItemSelectedBgColour=230,230,230
-GalleryItemBorderColour=200,200,200
-GalleryTextColour=120,120,120
-FloatPanelShadowColour=255,255,255,100
-CustomControlBgColour=200,200,200
-BorderlessFramePenColour=100,100,100
-
-# UI Text Colors
-DefaultTextColour=100,100,100
-MenuTextColour=0,0,0
-ErrorTextColour=255,0,0
-PlaceholderTextColour=128,128,128
-
-# Background Colors
-MainBackgroundColour=250,250,250
-SecondaryBackgroundColour=255,255,255
-ErrorBackgroundColour=255,255,255
-WarningBackgroundColour=245,245,245
-MenuBackgroundColour=255,255,255
-
-# Button and Control Colors
-ButtonTextPlaceholderColour=120,120,120
-DropdownBackgroundColour=255,255,255
-DropdownBorderColour=170,170,170
-DropdownHoverColour=230,230,230
-DropdownSelectionBgColour=0,120,215
-DropdownSelectionTextColour=255,255,255
-
-# Frame and Panel specific colors
-FrameAppWorkspaceColour=240,240,240
-SvgPanelBgColour=245,245,245
-ScrolledWindowBgColour=255,255,255
-IconPanelBgColour=255,255,255
-
-# SVG Theme Configuration
-SvgThemeEnabled=true
-
-# Sizes & Spacing - FlatUIBar
+# === FlatUIBar 尺寸 ===
+[BarSizes]
 BarTopMargin=2
 BarBottomMargin=0
 BarRenderHeight=30
@@ -120,8 +162,10 @@ BarPadding=0
 BarTabBorderTop=2
 TabTopSpacing=4
 TabsScrollButtonWidth=20
+SpaceDefaulWidth=100
 
-# Sizes & Spacing - FlatUIButtonBar
+# === 按钮栏尺寸 ===
+[ButtonBarSizes]
 ButtonbarTargetHeight=28
 ButtonbarIconSize=16
 ButtonbarHorizontalPadding=2
@@ -135,16 +179,20 @@ ButtonbarMenuVerticalOffset=2
 ButtonbarDropdownArrowWidth=6
 ButtonbarDropdownArrowHeight=3
 
-# Separator Constants
+# === 分隔符配置 ===
+[Separators]
 ButtonbarSeparatorWidth=1
 ButtonbarSeparatorPadding=2
 ButtonbarSeparatorMargin=2
+PanelSepatatorWidth=1
 
-#Icons
+# === 图标配置 ===
+[Icons]
 IconTextBelowSpacing=1
 IconTextBelowTopMargin=2
 
-# FlatUIGallery
+# === Gallery 尺寸 ===
+[GallerySizes]
 GalleryTargetHeight=28
 GalleryItemSpacing=2
 GalleryItemPadding=2
@@ -152,7 +200,8 @@ GalleryHorizontalMargin=2
 GalleryVerticalMargin=2
 GalleryInternalVerticalPadding=2
 
-# FlatUIPanel Size & Padding
+# === 面板尺寸和边距 ===
+[PanelSizes]
 PanelInternalVerticalPadding=2
 PanelInternalHorizontalPadding=2
 PanelInternalPaddingTotal=2
@@ -160,21 +209,27 @@ PanelTargetHeight=50
 PanelCollapsedHeight=16
 PanelDefaultHeaderAreaSize=16
 InnerbarBorderSpacing=2
-PanelSepatatorColor=200,200,200
-PanelSepatatorWidth=1
-
-# FlatUIPanel/Page Margin & Padding
 PanelMargin=4
 PanelPadding=4
 PageMargin=4
 PagePadding=4
 
-#HomeSpace
+# === 主页空间 ===
+[HomeSpace]
 SystemButtonWidth=40
 SystemButtonHeight=30
 SystemButtonSpacing=0
 
-#HomeMenu Params
-HomeMenuItemHeight=25; 
-HomeMenuSeparatorHeight=5;
-HomeMenuWidth=240;
+# === 主页菜单 ===
+[HomeMenu]
+HomeMenuItemHeight=25
+HomeMenuSeparatorHeight=5
+HomeMenuWidth=240
+
+# ====================================================================
+# 兼容性配置 - 为了向后兼容，保留FlatUIConstants段落
+# 这些值会根据当前主题从ThemeColors中动态设置
+# ====================================================================
+[FlatUIConstants]
+# 注意：此段落中的值会在运行时根据当前主题动态更新
+# 实际配置请修改上面的ThemeColors段落
